--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,15 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="mobile-web-app-capable" content="yes">
         <title>Polymer - Admin project</title>
+        <!-- JS dependencies -->
+        <script type="text/javascript" src="./bower-components/webcomponentsjs/webcomponents-lite.min.js"></script>
+
+        <!-- HTML imports for our components -->
+        <link rel="import" href="app/components/pd-dashboard/pd-dashboard.html" />
+
     </head>
     <body>
-        Test - it is working
+        <pd-dashboard></pd-dashboard>
+        <pd-dashboard></pd-dashboard>
     </body>
 </html>
