--- a/app/pages/staff/staff.html
+++ b/app/pages/staff/staff.html
@@ -1,1 +1,4 @@
-And this is the staff page
+<link rel="import" href="../../../../../app/pages/staff/staff-list.html" />
+
+<staff-list>
+</staff-list>
