--- a/app/pages/staff/staff-list.html
+++ b/app/pages/staff/staff-list.html
@@ -21,7 +21,37 @@
         }
     </style>
     <template>
+
+        <div class$="{{panelToggle}}">
+            <div class="edit-panel shadow-right">
+                <paper-input class="m-b-1 d-block" floatingLabel="true" label="First Name" value="{{editModel.firstName}}">
+                </paper-input>
+                <paper-input class="m-b-1 d-block" floatingLabel="true" label="Last Name" value="{{editModel.lastName}}">
+                </paper-input>
+                <paper-input class="m-b-1 d-block" floatingLabel="true" label="Username" value="{{editModel.userName}}">
+                </paper-input>
+                <pd-select class="m-b-1 d-block" floatingLabel="true" label="Type" value="{{editModel.type}}" options='["itadmin", "teacher", "principle"]'>
+                </pd-select>
+                <pd-select class="m-b-1 d-block" floatingLabel="true" label="Active" value="{{editModel.active}}" options='["Active", "Inactive"]'>
+                </pd-select>
+                <div class="f-right p-t-1">
+                    <paper-button tabindex="0" raised colored on-click="saveProfile">
+                        Save
+                    </paper-button>
+                    <paper-button tabindex="0" raised on-click="closePanel">
+                        Cancel
+                    </paper-button>
+                </div>
+            </div>
+        </div>
+
         <pd-card head="Staff List">
+            <div class="p-relative d-inline-block w-100 p-b-1">
+                <div class="f-right">
+                    <paper-icon-button icon="add" on-tap="openPanel">
+                    </paper-icon-button>
+                </div>
+            </div>
             <div class="table">
                 <div class="thead">
                     <div class="th">
@@ -67,8 +97,16 @@
                 </div>
             </div>
         </pd-card>
+
+        <paper-toast id="toast" text="">
+        </paper-toast>
+
         <iron-ajax id="searchProfilesRequest" url="http://localhost:5000/profiles" method="GET" handle-as="json" on-response="searchProfilesCallback" with-credentials="true">
         </iron-ajax>
+
+        <iron-ajax id="saveProfileRequest" url="http://localhost:5000/profiles" method="POST" handle-as="json" on-response="saveProfileCallback" with-credentials="true">
+        </iron-ajax>
+
     </template>
 </dom-module>
 
@@ -76,6 +114,19 @@
     Polymer({
         is: 'staff-list',
         properties: {
+            profiles: {
+                type: Array,
+                value: []
+            },
+            editModel: {
+                type: Object,
+                notify: true
+            },
+            panelToggle: {
+                type: String,
+                value: '',
+                notify: true
+            }
         },
         ready: function() {
             var self = this;
@@ -91,6 +142,31 @@
             for(var i = 0; i < this.profiles.length; i++) {
                 this.profiles[i].selected = false;
             }
+        },
+        openPanel: function(e) {
+            var self = this;
+            self.panelToggle = 'toggled';
+            self.editModel = {
+                firstName: '',
+                lastName: '',
+                username: '',
+                type: '',
+                active: ''
+            };
+        },
+        closePanel: function(e) {
+            this.panelToggle = '';
+        },
+        saveProfile: function() {
+            this.$.saveProfileRequest.body = JSON.stringify(this.editModel);
+            this.$.saveProfileRequest.contentType = 'application/json';
+            this.$.saveProfileRequest.generateRequest();
+        },
+        saveProfileCallback: function(response) {
+            this.$.toast.text = 'Profile Saved';
+            this.$.toast.show();
+            this.searchProfiles();
+            this.closePanel();
         }
     });
 </script>
