--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="mobile-web-app-capable" content="yes">
-        <title>Polymer - Admin project</title>
+        <title>Polymer - Admin project Edit</title>
         <!-- JS dependencies -->
         <script type="text/javascript" src="./bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 
         <!-- HTML imports for our components -->
-        <link rel="import" href="app/components/pd-dashboard/pd-dashboard.html" />
+        <link rel="import" href="app/components/pd-dashboard/pd-dashboard.vulcanized.html" />
 
     </head>
     <body>
